# rustysnake

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE.md  README.md  deploy.sh
packaging/: afterinstall  package.sh  rustysnake.service
src/: main.rs
src/controller/: gamepad.rs  mod.rs  snake.rs
src/model/: game.rs  mod.rs  shared.rs
src/view/: mod.rs  snakedisplay.rs  unicornhd.rs
