[package]
name = "rustysnake"
version = "0.1.2"
authors = ["Paul Praet"]
publish = false
repository = "https://github.com/praetp/rustysnake"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
mio = "^0.6"
evdev-rs = "^0.4"
libc = "^0.2"
rgb = "^0.8"
rand = "^0.8"


[dependencies.unicorn_hat_hd]
git = "https://github.com/BartMassey/unicorn-hat-hd-rs" #replace with https://github.com/jhelwig/unicorn-hat-hd-rs when PR has been accepted
#default-features = false
#features = ["fake-hardware"]
#Hitting here https://github.com/rust-lang/cargo/issues/1197

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-none-linux-gnueabihf-gcc"
